--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Hello CI/CD 🚀</h1>
     <p>This site was deployed automatically by GitHub Actions!</p>
+    <p>07 July 2025</p>
 </body>
 </html>
