testing demo for everyone :)

--- a/site/index.html
+++ b/site/index.html
@@ -9,7 +9,7 @@
 <body class="bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 text-white h-screen flex flex-col justify-center items-center">
   <div class="text-center animate-fadeIn">
     <h1 class="text-5xl font-extrabold mb-4">👋 Welcome Trainees!</h1>
-    <p class="text-2xl font-semibold mb-4">IBM High School Internship Workshop 2025</p>
+    <p class="text-2xl font-semibold mb-4">IBM High School Internship Workshop 2025 - this is the change for demo</p>
     <p class="text-lg mb-6 opacity-90">"Learn. Build. Deploy. 🚀"</p>
     <a href="https://github.com/your-username/simple-cicd-demo" 
        class="bg-white text-indigo-600 px-6 py-3 rounded-full text-lg font-medium hover:bg-gray-200 transition">
